--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "BlunderLab",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
+  "name": "blunderlab",
+  "private": true,
   "type": "module",
-  "devDependencies": {
-    "vitest": "^2.0.0"
-  },
   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "test": "vitest"
   },
-  "private": true
+  "dependencies": {
+    "chess.js": "^1.4.0",
+    "chessground": "^9.2.1"
+  },
+  "devDependencies": {
+    "vite": "^5.4.21",
+    "vitest": "^2.0.0"
+  }
 }
