github pages initialisierung

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
     "chess.js": "^1.4.0",
@@ -14,6 +15,7 @@
   },
   "devDependencies": {
     "vite": "^5.4.21",
-    "vitest": "^2.0.0"
+    "vitest": "^2.0.0",
+    "gh-pages": "^6.1.1"
   }
 }
